--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
       <h2 class="section-title">About Me</h2>
       <div class="card">
         <p>Hey! I'm Ezra — a curious and self-taught backend developer exploring the world of frontend and web development.
-          I enjoy building visually impressive programs with c++ and glsl. I also am working on build a minecraft computer.
-          I am also constantly working on improving this site. 
-          Currently, I am in highschool and also taking college classes. My plan is to major in electrical engineering and computer science.
-          This site is a little corner for me to share my coding project that i have built so far, but you can view more of my project on my <a href="https://www.youtube.com/channel/UCQugK6fGQNq9ldO01CxvDjw">youtube channel</a></p>
+          I enjoy building visually impressive programs with C++ and GLSL. I am working on building a Minecraft computer.
+          I am also continually working to improve this site. 
+          Currently, I am in high school and also taking college classes. My plan is to major in electrical engineering and computer science.
+          This site is a little corner for me to share my coding project that I have built so far, but you can view more of my projects on my <a href="https://www.youtube.com/channel/UCQugK6fGQNq9ldO01CxvDjw"> YouTube channel</a>!</p>
       </div>
     </section>
 
