Added Testing Area

--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
       </div>
 
       <div class="card">
+        <h3>Personal testing area</h3>
+        <p>A testing area for personal projects using HTML, CSS, and JavaScript. Built for fun and learning.</p>
+        <a href="./tutorial/index.html" target="_blank">View thes testing area</a>
+      </div>
+
+
+      <div class="card">
         <h3>More Projects Coming Soon</h3>
         <p>I am currently working on porting my games from c++ and glsl to javascript and the web.</p>
       </div>
