Updated Gift List

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 <body>
 
   <header>
-    <h1>Ezra</h1>
-    <p>Aspiring Developer | Learning by Doing</p>
+    <h1>Ezra Clintoc</h1>
+    <p>An Aspiring Developer</p>
   </header>
 
   <div class="container">
@@ -85,9 +85,16 @@
       </div>
 
       <div class="card">
+        <h3>Gift List</h3>
+        <p>A simple gift list for me</p>
+        <a href="./gift-list/index.html" target="_blank">View my gift list</a>
+      </div>
+
+
+      <div class="card">
         <h3>Personal testing area</h3>
         <p>A testing area for personal projects using HTML, CSS, and JavaScript. Built for fun and learning.</p>
-        <a href="./tutorial/index.html" target="_blank">View thes testing area</a>
+        <a href="./tutorial/index.html" target="_blank">View the testing area</a>
       </div>
 
 
