--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -37,11 +37,11 @@
         <h2>Contact Me</h2>
         <form action="" method="post">
             <label for="contact-email">Email</label>   
-            <input type="email" placeholder="Email" id="contact-email">
+            <input type="email" placeholder="Email" id="contact-email" required>
             
             <br>
             <label for="message">Message</label>
-            <input type="text" placeholder="Message" id="message">
+            <input type="text" placeholder="Message" id="message" required>
 
             <br>
             <button type="submit">Contact us</button>
