Updated index.html to include a gift list

--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
         <a href="./gift-list/index.html" target="_blank">View my gift list</a>
       </div>
 
-
       <div class="card">
         <h3>Personal testing area</h3>
         <p>A testing area for personal projects using HTML, CSS, and JavaScript. Built for fun and learning.</p>
@@ -118,7 +117,7 @@
   </div>
 
   <footer>
-    &copy; 2025 Ezra. Built with 💻 and ☕.
+    &copy; 2025 Ezra.
   </footer>
 
 </body>
