--- a/gift-list/index.html
+++ b/gift-list/index.html
@@ -71,6 +71,7 @@
                 color: var(--text);
                 font-size: 1rem;
                 margin-top: 0.1rem;
+                padding-left: 0.1rem;
             }
             .popup-parent:hover .popup {
                 display: block;
@@ -96,10 +97,17 @@
                     <p>Here are some items I would love to receive:</p>
                     <ul>
                         <li>Q9550 or Q9650 CPU for my minecraft server</li>
-                        <li>Mechanical Keyboard</li>
+                        <li><div class="popup-parent">Mechanical Keyboard
+                            <span class="popup">
+                                <ul>
+                                    <li>AULA F75</li>
+                                    <li>Rainy 75</li>
+                                </ul>
+                            </span>
+                        </div></li>
                         <li><div class="popup-parent">
                             Speed Rubik's Cube
-                            <span class="popup" style="padding-left: 0;">
+                            <span class="popup">
                                 <ul>
                                     <li>MoYu RS3M V5</li>
                                     <li>QiYi Valk 3M</li>
@@ -107,7 +115,21 @@
                             </span>
                         </div></li>
                         <li>A Lav Microphone</li>
-
+                        <li>Automatic Wire Stripper</li>
+                        <li>A PINECIL Soldering iron</li>
+                        <li>Full DaVinci Resolve Studio</li>
+                        <li>Raspberry Pi Hat</li>
+                        <li>Flight Sim Gear</li>
+                        <li>Decorations</li>
+                        <li>LED lights that can connect to Google Home</li>
+                        <li>CMF Buds from Nothing</li>
+                        <li><div class="popup-parent">SPF+ 10G to RJ45 Adapter
+                            <span class="popup" style="padding-left: 0.5rem;">
+                                <p>I have a network switch which takes SPF+ as the input.</p>
+                            </span>
+                        </div></li>
+                        <li>A server</li>
+                        <li>Something Cool</li>
                     </ul>
                 </div>
             </div>
