Updated Gift List 2

--- a/gift-list/index.html
+++ b/gift-list/index.html
@@ -76,6 +76,10 @@
             .popup-parent:hover .popup {
                 display: block;
             }
+            .popup:hover .popup {
+                display: block;
+            }
+
             footer {
                 text-align: center;
                 font-size: 0.9rem;
