--- a/gift-list/index.html
+++ b/gift-list/index.html
@@ -4,94 +4,12 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Ezra Clintoc | Gift List</title>
-
-        <style>
-            :root {
-                --bg: #0f172a;
-                --card: #1e293b;
-                --accent: #facc15;
-                --text: #f8fafc;
-            }
-            body {
-                margin: 0;
-                font-family: 'Segoe UI', sans-serif;
-                background: var(--bg);
-                color: var(--text);
-            }
-            header {
-                text-align: center;
-                padding: 3rem 1rem;
-                background-color: var(--card);
-            }
-            header h1 {
-                font-size: 2.5rem;
-                margin-bottom: 0.5rem;
-            }
-            header p {
-               color: #cbd5e1;
-            }
-            .container {
-                max-width: 900px;
-                margin: auto;
-                padding: 2rem;
-            }
-            .section-title {
-                font-size: 1.5rem;
-                margin-bottom: 1rem;
-                border-left: 4px solid var(--accent);
-                padding-left: 1rem;
-            }
-            .card {
-                background: var(--card);
-                padding: 1rem 1.5rem;
-                border-radius: 10px;
-                box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-                margin-bottom: 1.5rem;
-            }
-            .card a {
-                color: var(--accent);
-                text-decoration: none;
-            }
-            .popup-parent {
-                position: relative;
-                display: inline-block;
-            }
-            .popup {
-                background: var(--card);
-                border-radius: 10px;
-                box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-                padding: 1rem;
-                position: absolute;
-                top: 100%;
-                left: 50%;
-                transform: translateX(-30%);
-                z-index: 10;
-                display: none;
-                min-width: 220px;
-                color: var(--text);
-                font-size: 1rem;
-                margin-top: 0.1rem;
-                padding-left: 0.1rem;
-            }
-            .popup-parent:hover .popup {
-                display: block;
-            }
-            .popup:hover .popup {
-                display: block;
-            }
-
-            footer {
-                text-align: center;
-                font-size: 0.9rem;
-                padding: 2rem 1rem;
-                color: #94a3b8;
-            }
-        </style>
+        <link rel="stylesheet" href="../style.css"/>
     </head>
     <body>
         <header>
             <h1>Ezra Clintoc</h1>
-            <p>Gift List</p>
+            <p title="Ezra's Gift List">Gift List</p>
         </header>
 
         <section>
@@ -103,7 +21,7 @@
                         <li>Q9550 or Q9650 CPU for my minecraft server</li>
                         <li><div class="popup-parent">Mechanical Keyboard
                             <span class="popup">
-                                <ul>
+                                <ul style="padding-left: 0.5rem;">
                                     <li>AULA F75</li>
                                     <li>Rainy 75</li>
                                 </ul>
@@ -141,5 +59,6 @@
     </body>
     <footer>
         <p>&copy; 2025 Ezra Clintoc</p>
+        <a href="../index.html">Back to Home</a>
     </footer>
 </html>
