--- a/index.html
+++ b/index.html
@@ -4,66 +4,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ezra | Developer Portfolio</title>
-  <style>
-    :root {
-      --bg: #0f172a;
-      --card: #1e293b;
-      --accent: #facc15;
-      --text: #f8fafc;
-    }
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: var(--bg);
-      color: var(--text);
-    }
-    header {
-      text-align: center;
-      padding: 3rem 1rem;
-      background-color: var(--card);
-    }
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
-    header p {
-      color: #cbd5e1;
-    }
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 2rem;
-    }
-    .section-title {
-      font-size: 1.5rem;
-      margin-bottom: 1rem;
-      border-left: 4px solid var(--accent);
-      padding-left: 1rem;
-    }
-    .card {
-      background: var(--card);
-      padding: 1rem 1.5rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-      margin-bottom: 1.5rem;
-    }
-    .card a {
-      color: var(--accent);
-      text-decoration: none;
-    }
-    footer {
-      text-align: center;
-      font-size: 0.9rem;
-      padding: 2rem 1rem;
-      color: #94a3b8;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
   <header>
+    <img src="./images/avatar.png" alt="Ezra Clintoc's Avatar" id="avatar"/>
+
     <h1>Ezra Clintoc</h1>
     <p>An Aspiring Developer</p>
+
+    <ul id="top-menu-bar">
+      <li><a href="#">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact & Socials</a></li>
+    </ul>
   </header>
 
   <div class="container">
@@ -79,15 +35,9 @@
       </div>
     </section>
 
-    <section>
+    <section id="projects">
       <h2 class="section-title">Projects</h2>
-      
-      <div class="card">
-        <h3>🐍 Snake Game</h3>
-        <p>A simple browser-based snake game built using HTML, CSS, and JavaScript. Built for fun and learning.</p>
-        <a href="/snake/index.html" target="_blank">Play the Game</a>
-      </div>
-
+  
       <div class="card">
         <h3>Gift List</h3>
         <p>A simple gift list for me</p>
@@ -110,11 +60,13 @@
 
     </section>
 
-    <section>
-      <h2 class="section-title">Contact</h2>
+    <section id="contact">
+      <h2 class="section-title">Contact & Socials</h2>
       <div class="card">
         <p>Email: ezraclintoc@gmail.com</p>
         <p>GitHub: <a href="https://github.com/CodKid1710" target="_blank">CodKid1710</a></p>
+        <p>YouTube: <a href="https://www.youtube.com/channel/UCQugK6fGQNq9ldO01CxvDjw" target="_blank">Ezra Clintoc</a></p>
+        <p>Discord: <a href="https://discord.com/users/1137035707332964433" target="_blank">CodKid1710</a></p>
       </div>
     </section>
 
