Added Rubix Cube

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Ezra Clintoc</h1>
     <p>An Aspiring Developer</p>
 
-    <ul id="top-menu-bar">
+    <ul id="top-menu-bar" >
       <li><a href="#">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#projects">Projects</a></li>
@@ -22,7 +22,7 @@
     </ul>
   </header>
 
-  <div class="container">
+  <div class="container" id="content">
 
     <section id="about">
       <h2 class="section-title">About Me</h2>
@@ -41,7 +41,7 @@
       <div class="card">
         <h3>Gift List</h3>
         <p>A simple gift list for me</p>
-        <a href="./gift-list/index.html" target="_blank">View my gift list</a>
+        <a href="./giftlist/index.html" target="_blank">View my gift list</a>
       </div>
 
       <div class="card">
