--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -5,58 +5,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Testing Area</title>
     <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../sidemenu.css" />
   </head>
   <body>
     <header>
-      <img src="EzraIcon.png" alt="Profile Picture" width="100" />
+      <img src="../images/avatar.png" alt="Profile Picture" id="avatar"/>
       <h1>Ezra Clintoc</h1>
       <p>Personal Testing Area</p>
     </header>
     <br />
 
-    <div class="container">
-      <div class="card">
-        <a href="https://www.youtube.com/channel/UCQugK6fGQNq9ldO01CxvDjw"
-          >Youtube</a
-        >
-        <br />
-        <br />
-        <a href="https://www.github.com/CodKid1710">Github</a>
-        <br />
+    <div class="container" id="content">
+      <div id="sidemenu">
+        <section>
+          <div class="card">
+            <a href="https://www.youtube.com/channel/UCQugK6fGQNq9ldO01CxvDjw">Youtube</a>
+            <br />
+            <br />
+            <a href="https://www.github.com/CodKid1710">Github</a>
+            <br />
+            <br />
+            <a href="sidemenu.html">Sidemenu Example</a>
+            <br />
+          </div>
+        </section>
+        <section>
+          <div class="card">
+            <h2>Contact Me</h2>
+            <form action="" method="post" style="padding: 0.1rem">
+              <label for="contact-email">Email</label>
+              <input
+                type="email"
+                placeholder="Email"
+                id="contact-email"
+                required
+              />
 
-        <h3>My Favorite Movies</h3>
-        <table style="border: 1px solid black">
-          <tr>
-            <th>Movie</th>
-            <th>Ezra's Score</th>
-          </tr>
-          <tr>
-            <td>A Minecraft Movie</td>
-            <td>10/10</td>
-          </tr>
-          <tr>
-            <td>Interstellar</td>
-            <td>9/10</td>
-          </tr>
-          <tr>
-            <td>Starwars</td>
-            <td>7/10</td>
-          </tr>
-        </table>
+              <br />
+              <label for="message">Message</label>
+              <input type="text" placeholder="Message" id="message" required />
 
-        <br />
-        <h2>Contact Me</h2>
-        <form action="" method="post" style="padding: 0.1rem">
-          <label for="contact-email">Email</label>
-          <input type="email" placeholder="Email" id="contact-email" required />
-
-          <br />
-          <label for="message">Message</label>
-          <input type="text" placeholder="Message" id="message" required />
-
-          <br />
-          <button type="submit">Contact us</button>
-        </form>
+              <br />
+              <button type="submit">Contact us</button>
+            </form>
+          </div>
+        </section>
+      </div>
+      <div id="main">
+        <div class="card">
+          <h2>My Favorite Movies</h2>
+          <table style="border: 1px solid black">
+            <tr>
+              <th>Movie</th>
+              <th>Ezra's Score</th>
+            </tr>
+            <tr>
+              <td>A Minecraft Movie</td>
+              <td>10/10</td>
+            </tr>
+            <tr>
+              <td>Interstellar</td>
+              <td>9/10</td>
+            </tr>
+            <tr>
+              <td>Starwars</td>
+              <td>7/10</td>
+            </tr>
+          </table>
+        </div>
+        <div class="card">
+          <h2>Rubix Cube Face Challenge</h2>
+          <div class="rubix-face">
+            <div style="background-color: #0082df"></div>
+            <div style="background-color: #ffff00"></div>
+            <div style="background-color: #ff2c0a"></div>
+            <div style="background-color: #0082df"></div>
+            <div style="background-color: #ffff00"></div>
+            <div style="background-color: #ff2c0a"></div>
+            <div style="background-color: #0082df"></div>
+            <div style="background-color: #ffff00"></div>
+            <div style="background-color: #ff2c0a"></div>
+          </div>
+        </div>
       </div>
     </div>
     <footer>
