Added "Stocks" to gift list

--- a/giftlist/index.html
+++ b/giftlist/index.html
@@ -51,6 +51,8 @@
                             </span>
                         </div></li>
                         <li>A server</li>
+                        <li>Stocks</li>
+                        <li>Money/GiftCards (especially to JLCPCB)</li>
                         <li>Something Cool</li>
                     </ul>
                 </div>
