Added Set to my projects

--- a/giftlist/index.html
+++ b/giftlist/index.html
@@ -48,6 +48,7 @@
                         <li>Raspberry Pi Hat</li>
                         <li>Flight Sim Gear</li>
                         <li>Decorations</li>
+                        <li>An Electric Screw Driver</li>
                         <li>LED lights that can connect to Google Home</li>
                         <li>CMF Buds from Nothing</li>
                         <li><div class="popup-parent">SPF+ 10G to RJ45 Adapter
