--- a/index.html
+++ b/index.html
@@ -39,8 +39,14 @@
       <h2 class="section-title">Projects</h2>
   
       <div class="card">
+        <h3>Set</h3>
+        <p>A simple game in which you get points by creating sets</p>
+        <a href="games/set/index.html">Play now!</a>
+      </div>
+
+      <div class="card">
         <h3>Gift List</h3>
-        <p>A simple gift list for me</p>
+        <p>A gift list for me</p>
         <a href="./giftlist/index.html" target="_blank">View my gift list</a>
       </div>
 
@@ -49,7 +55,6 @@
         <p>A testing area for personal projects using HTML, CSS, and JavaScript. Built for fun and learning.</p>
         <a href="./tutorial/index.html" target="_blank">View the testing area</a>
       </div>
-
 
       <div class="card">
         <h3>More Projects Coming Soon</h3>
