Fixed two.js Again

--- a/games/set/index.html
+++ b/games/set/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <script src="../../node_modules/two.js/build/two.js"></script>
+    <script src="../../packages/two.min.js"></script>
 </head>
 <body>
     <header>
