Update gift list 4

--- a/giftlist/index.html
+++ b/giftlist/index.html
@@ -36,7 +36,7 @@
                                 </ul>
                             </span>
                         </div></li>
-                        <li>A Lav Microphone</li>
+                        <li>A Lav Microphone (Clip on Mic)</li>
                         <li>Automatic Wire Stripper</li>
                         <li><div class="popup-parent">Soldering iron
                             <span class="popup">
@@ -44,6 +44,9 @@
                                 Or a soldering iron with replaceable tips like <a href="https://www.amazon.com/Liouhoum-Auto-Sleep-Adjustable-Temperature-Thermostatic/dp/B08PZBPXLZ/ref=sr_1_8?_encoding=UTF8&dib=eyJ2IjoiMSJ9._epGCONlI6xNOYy8ZGydKFwrsWblCx1nG-KNUJqD7S1bfs9iJqdNw7VaXbXi0PsEEInhSjeAR2x1bmB5hkJeV92vPRGL_pD970BtrqRmIzpodnZACYdSBZ57kOXISZQq-o9Ew98GCS7TXiKuUPVWDsaWOR1Fy4bGvtKRAtVueOIW4elzG8EBnE71EBAPzp0-lLFXWemXHXk4CL-2oI_ayp3WP08pqC6AjFAyiw4qb8pjB_E2hNwOXneNr7QL_UV8GI4zeC3mromkGPWioFMJ5mrQ_uwKGtFVpG-xK8qUkUs.43PEVSsOQ97-OZjokAmf6Hi8QysX5z4OOBiJwaXhOLU&dib_tag=se&keywords=electronics&qid=1754290143&s=bazaar&sr=1-8&psc=1">this</a>
                             </span></div>
                         </li>
+                        <li>Other soldering iron stuff</li>
+                        <li>RC Drone/Airplane stuff</li>
+                        <li>A Digital Microscope</li>
                         <li>Full DaVinci Resolve Studio</li>
                         <li>Raspberry Pi Hat</li>
                         <li>Flight Sim Gear</li>
