Updated Gift List 4
Added Prices

--- a/giftlist/index.html
+++ b/giftlist/index.html
@@ -18,50 +18,75 @@
                     <h2 class="section-title">My Gift List</h2>
                     <p>Here are some items I would love to receive:</p>
                     <ul>
-                        <li>Q9550 or Q9650 CPU for my minecraft server</li>
-                        <li><div class="popup-parent">Mechanical Keyboard
+                        <li>Q9550 or Q9650 CPU for my minecraft server - $10-20 Ebay</li>
+                        <li><div class="popup-parent">
+                            Mechanical Keyboard - $40-80
                             <span class="popup">
                                 <ul style="padding-left: 0.5rem;">
-                                    <li>AULA F75</li>
-                                    <li>Rainy 75</li>
+                                    <li><a href="https://www.amazon.com/AULA-Mechanical-Swappable-Pre-lubed-Reaper/dp/B0D14N2QZF/ref=sr_1_3?crid=1DQAA2WJHN9C8&dib=eyJ2IjoiMSJ9.OSLBe9KRUZqjv3sBIVzdHzlRozkEnSatpcjhOnu6qnRVLDJMPRelnnq1R_zVqCCfXCRoaoDZ2c6LnMamoq4ZP7m9YiSKvBQammR6Iovy24FbwKijBT4NNtoi2HQH8yB6c7dTSMHDTV0vC0MrA8RtnjlxoSG4CSyVm0tA4Sa3C4xdKzb-jrway81QPaFSOF-UvdPDwmWC4MS7kk6ISBPlRPPUfk9CRKJmGVa1mK17xQA.QuZX42IHp1eyXrRsLEsTMuF79Q_vRH2DLB5UGE6U2E8&dib_tag=se&keywords=alua+f75&qid=1754465864&sprefix=alua+f75%2Caps%2C505&sr=8-3">
+                                        AULA F75</a></li>
+                                    <li><a href="">Rainy 75</a></li>
                                 </ul>
                             </span>
                         </div></li>
                         <li><div class="popup-parent">
-                            Speed Rubik's Cube
+                            Speed Rubik's Cube - $20-30 
                             <span class="popup">
                                 <ul>
-                                    <li>MoYu RS3M V5</li>
+                                    <li><a href="https://www.amazon.com/CuberShop-Display-Stickerless-Ball-Core-Robot-Shape/dp/B0CKC3W112/ref=sr_1_1?crid=2QXHKZSNITC9P&dib=eyJ2IjoiMSJ9.55DBKhaLLuhIgXojv5VtFLcn7VLxinKZejHIKbs-51s4MHYZxWkACIQSRNIMKISlwbdVtLxK7WOB_bgMIIHS6Sfosha-8jVkoWZZasnyoz41lkMRfLxB5o0bMTKy_Avkp6Av-bnDknVS1h75vkQK2VC-HXB5vkL9znFjQuKSalRQmJ-HFFNEAIH1e1rALXUxTFeH6TfNJs3KeA6j9unyAkPaf5DZxNYQdH0T9S2bcSuYIWMrL-z6qYP-9BPUhBnIabQWQMN-9GGjZGEBGRCzAx11_Da1OhXS0TA4hn9YOY8.pjFnEJPSDRpTLAHLTQUsJJcCOZmxDuIzFI_CxFkFmCo&dib_tag=se&keywords=moyu%2Brs3m%2Bv5&qid=1754466049&sprefix=moyo%2Brs3m%2Bv5%2Caps%2C219&sr=8-1&th=1">
+                                        MoYu RS3M V5</a></li>
                                     <li>QiYi Valk 3M</li>
                                 </ul>
                             </span>
                         </div></li>
-                        <li>A Lav Microphone (Clip on Mic)</li>
+                        <li>
+                            <a href="https://www.amazon.com/Microphone-RICCHI-Recording-Interview-Streaming/dp/B0CHZCTFTN/ref=sr_1_3?crid=24GANVIRO8OXD&dib=eyJ2IjoiMSJ9.uF9xH_s6uZC2hqIrGz6Ks_wccQkxL7LoG-LHHurdnbQVRDZQ82Tz8Kldoyp7CUyRUnT6m6H4Tu1QRGpF8cz-ARMLJGwUWi3GsB-3NgHoK9-8T82iGbXHvDgk_wXO149IH-3T7UFoulRQJf-6A_PxdvlG_zRq8oBE6zW8yxh_L9u8cDme0-zqapaQBiaI-7Gu10-VSlBz75j9PKCCE4tZRhKw6NRme_88sZ_kTzQeBm06K-1nzcIhlDBgTIqbZ14qNA_ugWFqzbdBzhP1kr-yu6TsfOJWuRZBgarJGIF3_tA.7bEzLFImdkqS-GzL66Un8kcAqvICEPGUlGCcYj66QmI&dib_tag=se&keywords=lav%2Bmicrophone&qid=1754466203&sprefix=lav%2Bmicrophon%2Caps%2C253&sr=8-3&th=1">
+                                A Lav Microphone (Clip on Mic)</a> - $5-10</li>
                         <li>Automatic Wire Stripper</li>
-                        <li><div class="popup-parent">Soldering iron
+                        <li><div class="popup-parent">Soldering iron - $10-40
                             <span class="popup">
-                                A PINECIL Soldering Iron
-                                Or a soldering iron with replaceable tips like <a href="https://www.amazon.com/Liouhoum-Auto-Sleep-Adjustable-Temperature-Thermostatic/dp/B08PZBPXLZ/ref=sr_1_8?_encoding=UTF8&dib=eyJ2IjoiMSJ9._epGCONlI6xNOYy8ZGydKFwrsWblCx1nG-KNUJqD7S1bfs9iJqdNw7VaXbXi0PsEEInhSjeAR2x1bmB5hkJeV92vPRGL_pD970BtrqRmIzpodnZACYdSBZ57kOXISZQq-o9Ew98GCS7TXiKuUPVWDsaWOR1Fy4bGvtKRAtVueOIW4elzG8EBnE71EBAPzp0-lLFXWemXHXk4CL-2oI_ayp3WP08pqC6AjFAyiw4qb8pjB_E2hNwOXneNr7QL_UV8GI4zeC3mromkGPWioFMJ5mrQ_uwKGtFVpG-xK8qUkUs.43PEVSsOQ97-OZjokAmf6Hi8QysX5z4OOBiJwaXhOLU&dib_tag=se&keywords=electronics&qid=1754290143&s=bazaar&sr=1-8&psc=1">this</a>
+                                <a href="https://www.amazon.com/PINECIL-Smart-Mini-Portable-Soldering/dp/B096X6SG13/ref=sr_1_1?crid=MSG2GDC0W0FK&dib=eyJ2IjoiMSJ9.LBc5yq512NqGMLNXVKNoBFOjiosq6rCWGaxgIlXFrTGy5a4DaCAeiMI483AfyCmmN-6Jy6eOD1BtL-D98ISperBOtjGFSOww85vCyVudMmbl3Kz4EXstmkxdoty5l6UHn1BujTOfrSaoQWVuiquqIr60w6Ky06z0Ji6BVCZmMw3BhC5ZsH4dchZrDfqCrYAlQ5VVqXTyHH5CXW3yUFexMQZucQstC9K_VSyVt__z0nl4fvMxinn1SKelNWpcQH45T2LtmDV7Kdc0XO1naFgbbAyCImrcabrcZXtzXG9X4Fg.CoEVjf6JaxT3UP20UyW8ZB6PWQMxj2HBzGAnvGdW0m8&dib_tag=se&keywords=pinecil&qid=1754466624&sprefix=pinecil%2Caps%2C252&sr=8-1">
+                                A PINECIL Soldering Iron</a>
+                                Or a soldering iron with replaceable tips like <a href="https://www.amazon.com/Liouhoum-Auto-Sleep-Adjustable-Temperature-Thermostatic/dp/B08PZBPXLZ/ref=sr_1_8?_encoding=UTF8&dib=eyJ2IjoiMSJ9._epGCONlI6xNOYy8ZGydKFwrsWblCx1nG-KNUJqD7S1bfs9iJqdNw7VaXbXi0PsEEInhSjeAR2x1bmB5hkJeV92vPRGL_pD970BtrqRmIzpodnZACYdSBZ57kOXISZQq-o9Ew98GCS7TXiKuUPVWDsaWOR1Fy4bGvtKRAtVueOIW4elzG8EBnE71EBAPzp0-lLFXWemXHXk4CL-2oI_ayp3WP08pqC6AjFAyiw4qb8pjB_E2hNwOXneNr7QL_UV8GI4zeC3mromkGPWioFMJ5mrQ_uwKGtFVpG-xK8qUkUs.43PEVSsOQ97-OZjokAmf6Hi8QysX5z4OOBiJwaXhOLU&dib_tag=se&keywords=electronics&qid=1754290143&s=bazaar&sr=1-8&psc=1">
+                                    this</a> (this is my preferred since it has more wattage and comes with a set of tips)
                             </span></div>
                         </li>
-                        <li>Other soldering iron stuff</li>
+                        <li>Other soldering stuff</li>
                         <li>RC Drone/Airplane stuff</li>
-                        <li>A Digital Microscope</li>
-                        <li>Full DaVinci Resolve Studio</li>
-                        <li>Raspberry Pi Hat</li>
-                        <li>Flight Sim Gear</li>
+                        <li><a href="https://www.amazon.com/Elikliv-Microscope-Endoscope-Magnification-Adjustable/dp/B07QB79SN6/ref=sr_1_4?crid=2CX4P7CKUCRCR&dib=eyJ2IjoiMSJ9.UJu4SukW_gmXoEXoPZ5k9lY83O4wZLZucwDuZctotpR9gmM7chAT2GTUFngnGmgI-TQA79wqGzMcu3tTB0LEHzipjf8LspGPXZeu2Y_mqB3SBgYacPd2hZ10fRekmS45qhxjEQ47Z376vjkHsqMex_3oYQOGRJ-TXeAYLPW_4cU4LE43eoce-MEk1-vqei7Wg9bPhY5rvJMZL-vfHv73zY03euuqFS72ZU_UNn0Z8wk.SkkbygY2W6HlcA-EoHaSgmk8TjsEf8LR5xnnYPRMfdc&dib_tag=se&keywords=digital%2Bmicroscope&qid=1754475981&sprefix=digital%2Bmicroscope%2Caps%2C224&sr=8-4&th=1">
+                                A Digital Microscope</a> - $35-200</li>
+                        <li>Full DaVinci Resolve Studio - $295</li>
+                        <li>Raspberry Pi 5 - $60-90</li>
+                        <li>Flight Sim Gear - $150+</li>
                         <li>Decorations</li>
-                        <li>An Electric Screw Driver</li>
-                        <li>LED lights that can connect to Google Home</li>
-                        <li>CMF Buds from Nothing</li>
-                        <li><div class="popup-parent">SPF+ 10G to RJ45 Adapter
+                        <li><a href="https://www.amazon.com/Fanttik-Screwdriver-Precision-E1-MAX/dp/B0BGWRWRX2/ref=sr_1_6?crid=369UC06JGRT7X&dib=eyJ2IjoiMSJ9.50djx9an2jbOUhaT0rGG4s90PXLeQ4SPkezIXVdizvFXNkWGdy8INMQVlI0tPcIoZOJhhJcOuNNuChPD8blFHP9k38M1IN-AzOADvkARSP0bbQQGPSbTYGeyCVGjrqtGKpU9wuQGVlSfhzKGZOu6OR4KT-02X8iCJe-fI2VpC87HsKVLjMbTCaeuM-uqsooBqZn3BoNS-qwQq7sURiRuh-_iYFRz0mQgFPSe1EpBdC50B_y7XlbcJLTGitIf2_LHx81DG4Xry56_QxhnhF3Oixb-BDyTLZEoo0ApcoTSXPk.GLNGHVPZe1v4voNtvLpd6r7DqUkFGWJzpYnC69pJm30&dib_tag=se&keywords=electric%2Bscrewdriver&qid=1754476283&sprefix=electric%2Bscrewdrive%2Caps%2C213&sr=8-6&th=1">
+                            An Electric Screw Driver</a> - $20-60</li>
+                        <li>ARGB LED lights (Prefably ADDRESSABLE RGB Led Lightrs)</li>
+                        <li><a href="https://us.nothing.tech/collections/audio">CMF Buds 2(or 2a) in Orange</a> - $30-50</li>
+                        <li><div class="popup-parent"><a href="https://www.amazon.com/XZSNET-1000BASE-T-Transceiver-Compatible-UF-RJ45-1G/dp/B0CJCDDLDG/ref=sr_1_2?crid=2TPQBMBMJYYKD&dib=eyJ2IjoiMSJ9.VPtyB6yXTkKpRTO155K0B-65Kh-al0-EKNqRkT-qc1ImUXyputPqc5accLEAjWYeMiAIDTuFtLyAyUOXL3N2C91NNf--IxygesnmUVFENpCaBlGrHaMTPQgBf0qBM0KtNSNowlA3eaUpPmUx-jK2zjA7XxfKwBmmtBNIgMosWMMI7ewiTBnH9TYXJK6JIAFpIj229xoOdmSKtVUMvK1lNR-Z_qQUbLzQEbMNIqoNu3YXbCwbo7P5zuQUU76kXJCyjExgSv0k-JSq56BPs9bqCc1wEIpjzsCbx3saU097xLw.STGc-R9H-vQVJ8TphCbVtCQD6fpe05sRM4Hs7oRhN78&dib_tag=se&keywords=sfp%2B+to+rj45&qid=1754476808&s=bazaar&sprefix=sfp%2B+to+rj4%2Cbazaar%2C166&sr=1-2&srs=121974693011&psc=1">
+                                                          SFP+ 10G to RJ45 Adapter</a>
                             <span class="popup" style="padding-left: 0.5rem;">
-                                <p>I have a network switch which takes SPF+ as the input.</p>
+                                <p>I have a network switch which takes SFP+ as the input.</p>
                             </span>
                         </div></li>
                         <li>A server</li>
+                        <li><div class="popup-parnet">Coral TPU - $40-60</div
+                            <span class="popup">
+                                Get an <a href="https://www.amazon.com/XZSNET-1000BASE-T-Transceiver-Compatible-UF-RJ45-1G/dp/B0CJCDDLDG/ref=sr_1_2?crid=2TPQBMBMJYYKD&dib=eyJ2IjoiMSJ9.VPtyB6yXTkKpRTO155K0B-65Kh-al0-EKNqRkT-qc1ImUXyputPqc5accLEAjWYeMiAIDTuFtLyAyUOXL3N2C91NNf--IxygesnmUVFENpCaBlGrHaMTPQgBf0qBM0KtNSNowlA3eaUpPmUx-jK2zjA7XxfKwBmmtBNIgMosWMMI7ewiTBnH9TYXJK6JIAFpIj229xoOdmSKtVUMvK1lNR-Z_qQUbLzQEbMNIqoNu3YXbCwbo7P5zuQUU76kXJCyjExgSv0k-JSq56BPs9bqCc1wEIpjzsCbx3saU097xLw.STGc-R9H-vQVJ8TphCbVtCQD6fpe05sRM4Hs7oRhN78&dib_tag=se&keywords=sfp%2B+to+rj45&qid=1754476808&s=bazaar&sprefix=sfp%2B+to+rj4%2Cbazaar%2C166&sr=1-2&srs=121974693011&psc=1">
+                                M.2 to USB C Converter</a> and <a href="https://coral.ai/products/m2-accelerator-ae">this</a> or <a href="https://coral.ai/products/m2-accelerator-dual-edgetpu">this</a>   
+                            </span>    
+                        <li>
                         <li>Stocks</li>
-                        <li>Money/GiftCards (especially to JLCPCB)</li>
+                        <li>Cash/GiftCards (especially to JLCPCB)</li>
+                        <li><div class="popup-parent">Electrical Components</div>
+                            <span class="popup">
+                                <ul>
+                                    <li>Stepper Motor Driver</li>
+                                    <li>Stepper Motor</li>
+                                    <li>DC Motor Driver (H-Bridge)<li>
+                                    <li>A Varity of resistors</li>
+                            </span>
+                        </li>
                         <li>Something Cool</li>
                     </ul>
                 </div>
