--- a/giftlist/index.html
+++ b/giftlist/index.html
@@ -42,7 +42,8 @@
                         <li>
                             <a href="https://www.amazon.com/Microphone-RICCHI-Recording-Interview-Streaming/dp/B0CHZCTFTN/ref=sr_1_3?crid=24GANVIRO8OXD&dib=eyJ2IjoiMSJ9.uF9xH_s6uZC2hqIrGz6Ks_wccQkxL7LoG-LHHurdnbQVRDZQ82Tz8Kldoyp7CUyRUnT6m6H4Tu1QRGpF8cz-ARMLJGwUWi3GsB-3NgHoK9-8T82iGbXHvDgk_wXO149IH-3T7UFoulRQJf-6A_PxdvlG_zRq8oBE6zW8yxh_L9u8cDme0-zqapaQBiaI-7Gu10-VSlBz75j9PKCCE4tZRhKw6NRme_88sZ_kTzQeBm06K-1nzcIhlDBgTIqbZ14qNA_ugWFqzbdBzhP1kr-yu6TsfOJWuRZBgarJGIF3_tA.7bEzLFImdkqS-GzL66Un8kcAqvICEPGUlGCcYj66QmI&dib_tag=se&keywords=lav%2Bmicrophone&qid=1754466203&sprefix=lav%2Bmicrophon%2Caps%2C253&sr=8-3&th=1">
                                 A Lav Microphone (Clip on Mic)</a> - $5-10</li>
-                        <li>Automatic Wire Stripper</li>
+                        <li><a href="https://www.amazon.com/haisstronica-Stripper-Automatic-Crimping-Universal/dp/B0B2NWK1QX/ref=sr_1_10?dib=eyJ2IjoiMSJ9.0cTy2lxmvFlOvylsKrH0kjGH9O6v1Yv17OwsSvgvemLIaj52kzfgCwDBzeQojuPxpIlKAkpp7QHiN22McEfuNI70MxGdEZhPW90D6ruxg2De_jLmT4xm6CbUOBHHF5Mq_ZTe6tUInJFh6rR1-ng1r2YgAutFnQudWOvCUyHkv4RpxbfvmPAPMmthIOrJ8kP8ZFeM2vUIAb8f6suyNYh-kreuAFEOF1SziYtny_2Vcg9wGFhYjW04o-b3tRd9lB6t_Lz-r8QQvXgwTxYl1e_O6cCv3PeM-aD33ZwFrnwk5zM.grOq8SRPlEtKTTl3HdrTWr1oehGNymiIsh0mM1oO8rM&dib_tag=se&keywords=automatic%2Bwire%2Bstripper&qid=1754477948&sr=8-10&th=1">
+                            Automatic Wire Stripper</a> - $10-20</li>
                         <li><div class="popup-parent">Soldering iron - $10-40
                             <span class="popup">
                                 <a href="https://www.amazon.com/PINECIL-Smart-Mini-Portable-Soldering/dp/B096X6SG13/ref=sr_1_1?crid=MSG2GDC0W0FK&dib=eyJ2IjoiMSJ9.LBc5yq512NqGMLNXVKNoBFOjiosq6rCWGaxgIlXFrTGy5a4DaCAeiMI483AfyCmmN-6Jy6eOD1BtL-D98ISperBOtjGFSOww85vCyVudMmbl3Kz4EXstmkxdoty5l6UHn1BujTOfrSaoQWVuiquqIr60w6Ky06z0Ji6BVCZmMw3BhC5ZsH4dchZrDfqCrYAlQ5VVqXTyHH5CXW3yUFexMQZucQstC9K_VSyVt__z0nl4fvMxinn1SKelNWpcQH45T2LtmDV7Kdc0XO1naFgbbAyCImrcabrcZXtzXG9X4Fg.CoEVjf6JaxT3UP20UyW8ZB6PWQMxj2HBzGAnvGdW0m8&dib_tag=se&keywords=pinecil&qid=1754466624&sprefix=pinecil%2Caps%2C252&sr=8-1">
@@ -64,13 +65,13 @@
                         <li>ARGB LED lights (Prefably ADDRESSABLE RGB Led Lightrs)</li>
                         <li><a href="https://us.nothing.tech/collections/audio">CMF Buds 2(or 2a) in Orange</a> - $30-50</li>
                         <li><div class="popup-parent"><a href="https://www.amazon.com/XZSNET-1000BASE-T-Transceiver-Compatible-UF-RJ45-1G/dp/B0CJCDDLDG/ref=sr_1_2?crid=2TPQBMBMJYYKD&dib=eyJ2IjoiMSJ9.VPtyB6yXTkKpRTO155K0B-65Kh-al0-EKNqRkT-qc1ImUXyputPqc5accLEAjWYeMiAIDTuFtLyAyUOXL3N2C91NNf--IxygesnmUVFENpCaBlGrHaMTPQgBf0qBM0KtNSNowlA3eaUpPmUx-jK2zjA7XxfKwBmmtBNIgMosWMMI7ewiTBnH9TYXJK6JIAFpIj229xoOdmSKtVUMvK1lNR-Z_qQUbLzQEbMNIqoNu3YXbCwbo7P5zuQUU76kXJCyjExgSv0k-JSq56BPs9bqCc1wEIpjzsCbx3saU097xLw.STGc-R9H-vQVJ8TphCbVtCQD6fpe05sRM4Hs7oRhN78&dib_tag=se&keywords=sfp%2B+to+rj45&qid=1754476808&s=bazaar&sprefix=sfp%2B+to+rj4%2Cbazaar%2C166&sr=1-2&srs=121974693011&psc=1">
-                                                          SFP+ 10G to RJ45 Adapter</a>
+                                                          SFP+ 10G to RJ45 Adapter - $10</a>
                             <span class="popup" style="padding-left: 0.5rem;">
                                 <p>I have a network switch which takes SFP+ as the input.</p>
                             </span>
                         </div></li>
                         <li>A server</li>
-                        <li><div class="popup-parnet">Coral TPU - $40-60</div
+                        <li><div class="popup-parent">Coral TPU - $40-60</div>
                             <span class="popup">
                                 Get an <a href="https://www.amazon.com/XZSNET-1000BASE-T-Transceiver-Compatible-UF-RJ45-1G/dp/B0CJCDDLDG/ref=sr_1_2?crid=2TPQBMBMJYYKD&dib=eyJ2IjoiMSJ9.VPtyB6yXTkKpRTO155K0B-65Kh-al0-EKNqRkT-qc1ImUXyputPqc5accLEAjWYeMiAIDTuFtLyAyUOXL3N2C91NNf--IxygesnmUVFENpCaBlGrHaMTPQgBf0qBM0KtNSNowlA3eaUpPmUx-jK2zjA7XxfKwBmmtBNIgMosWMMI7ewiTBnH9TYXJK6JIAFpIj229xoOdmSKtVUMvK1lNR-Z_qQUbLzQEbMNIqoNu3YXbCwbo7P5zuQUU76kXJCyjExgSv0k-JSq56BPs9bqCc1wEIpjzsCbx3saU097xLw.STGc-R9H-vQVJ8TphCbVtCQD6fpe05sRM4Hs7oRhN78&dib_tag=se&keywords=sfp%2B+to+rj45&qid=1754476808&s=bazaar&sprefix=sfp%2B+to+rj4%2Cbazaar%2C166&sr=1-2&srs=121974693011&psc=1">
                                 M.2 to USB C Converter</a> and <a href="https://coral.ai/products/m2-accelerator-ae">this</a> or <a href="https://coral.ai/products/m2-accelerator-dual-edgetpu">this</a>   
@@ -85,6 +86,7 @@
                                     <li>Stepper Motor</li>
                                     <li>DC Motor Driver (H-Bridge)<li>
                                     <li>A Varity of resistors</li>
+                                </ul>
                             </span>
                         </li>
                         <li>Something Cool</li>
