Update gift list 6

--- a/giftlist/index.html
+++ b/giftlist/index.html
@@ -84,7 +84,7 @@
                                 <ul>
                                     <li>Stepper Motor Driver</li>
                                     <li>Stepper Motor</li>
-                                    <li>DC Motor Driver (H-Bridge)<li>
+                                    <li>DC Motor Driver (H-Bridge)</li>
                                     <li>A Varity of resistors</li>
                                 </ul>
                             </span>
