--- a/giftlist/index.html
+++ b/giftlist/index.html
@@ -71,15 +71,15 @@
                             </span>
                         </div></li>
                         <li>A server</li>
-                        <li><div class="popup-parent">Coral TPU - $40-60</div>
+                        <li><div class="popup-parent">Coral TPU - $40-60
                             <span class="popup">
                                 Get an <a href="https://www.amazon.com/XZSNET-1000BASE-T-Transceiver-Compatible-UF-RJ45-1G/dp/B0CJCDDLDG/ref=sr_1_2?crid=2TPQBMBMJYYKD&dib=eyJ2IjoiMSJ9.VPtyB6yXTkKpRTO155K0B-65Kh-al0-EKNqRkT-qc1ImUXyputPqc5accLEAjWYeMiAIDTuFtLyAyUOXL3N2C91NNf--IxygesnmUVFENpCaBlGrHaMTPQgBf0qBM0KtNSNowlA3eaUpPmUx-jK2zjA7XxfKwBmmtBNIgMosWMMI7ewiTBnH9TYXJK6JIAFpIj229xoOdmSKtVUMvK1lNR-Z_qQUbLzQEbMNIqoNu3YXbCwbo7P5zuQUU76kXJCyjExgSv0k-JSq56BPs9bqCc1wEIpjzsCbx3saU097xLw.STGc-R9H-vQVJ8TphCbVtCQD6fpe05sRM4Hs7oRhN78&dib_tag=se&keywords=sfp%2B+to+rj45&qid=1754476808&s=bazaar&sprefix=sfp%2B+to+rj4%2Cbazaar%2C166&sr=1-2&srs=121974693011&psc=1">
                                 M.2 to USB C Converter</a> and <a href="https://coral.ai/products/m2-accelerator-ae">this</a> or <a href="https://coral.ai/products/m2-accelerator-dual-edgetpu">this</a>   
-                            </span>    
+                            </span></div>
                         <li>
                         <li>Stocks</li>
                         <li>Cash/GiftCards (especially to JLCPCB)</li>
-                        <li><div class="popup-parent">Electrical Components</div>
+                        <li><div class="popup-parent">Electrical Components
                             <span class="popup">
                                 <ul>
                                     <li>Stepper Motor Driver</li>
@@ -87,7 +87,7 @@
                                     <li>DC Motor Driver (H-Bridge)</li>
                                     <li>A Varity of resistors</li>
                                 </ul>
-                            </span>
+                            </span></div>
                         </li>
                         <li>Something Cool</li>
                     </ul>
