--- a/giftlist/index.html
+++ b/giftlist/index.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="card">
                     <h2 class="section-title">My Gift List</h2>
-                    <p>Here are some items I would love to receive:</p>
+                    <p>Here is my gift list. Or look on <a href="https://www.giftster.com/gift/GC0aG/">Giftster</a></p>
                     <ul>
                         <li>Q9550 or Q9650 CPU for my minecraft server - $10-20 Ebay</li>
                         <li><div class="popup-parent">
