Added multiplayer bascis for set

--- a/games/set/game.html
+++ b/games/set/game.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Set - The Game</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../style.css">
 
     <script src="../../packages/two.min.js"></script>
+    <script src="https://js.pusher.com/8.3.0/pusher.min.js"></script>
 </head>
 <body>
     <header>
@@ -21,8 +22,8 @@
     </main>
     <footer>
         <p>&copy; 2025 Ezra Clintoc</p>
-        <a href="../index.html">Back to Home</a>
+        <a href="../../index.html">Back to Home</a>
     </footer>
-    <script src="script.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
