Linked game to webpage

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="card">
         <h3>Set</h3>
         <p>A simple game in which you get points by creating sets</p>
-        <a href="games/set/index.html">Play now!</a>
+        <a href="games/set/menu.html">Play now!</a>
       </div>
 
       <div class="card">
