Added the ability to add 3 cards and also added functality to how to play button

--- a/games/set/game.html
+++ b/games/set/game.html
@@ -14,13 +14,16 @@
 <body>
     <header>
         <h1>Set</h1>
-        <a href="#"> Learn how to play</a>
+        <a href="https://officialgamerules.org/game-rules/set"> Learn how to play</a>
     </header>
     <main id="content">
         <div id="game-info-overlay">
             <p><strong>Game ID:</strong> <span id="game-id">N/A</span></p>
             <p><strong>Role:</strong> <span id="player-role">N/A</span></p>
         </div>
+
+        <button id="add-cards-button" style="margin:1rem auto;display:block;" onclick="voteAddCards()">Add 3 Cards</button>
+
 
         <div id="game-container">
             <!-- Game board will be generated here -->
