Updated Voting System

--- a/games/set/game.html
+++ b/games/set/game.html
@@ -22,7 +22,7 @@
             <p><strong>Role:</strong> <span id="player-role">N/A</span></p>
         </div>
 
-        <button id="add-cards-button" style="margin:1rem auto;display:block;" onclick="voteAddCards()">Add 3 Cards</button>
+        <button id="add-cards-button" style="margin:1rem auto;display:block;" onclick="voteAddCards()">Add 3 Cards (0%)</button>
 
 
         <div id="game-container">
